--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ http {
     server {
         listen 8080;
         location / {
-            proxy_pass         http://feed;
+            proxy_pass         /;
         }
     }
 }
