Update proxy pass and service upstream

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ http {
     sendfile on;
 
     upstream feed {
-        server my-app-2:8080;
+        server my-app-2-svc:8080;
     }
     
     proxy_set_header   Host $host;
@@ -19,7 +19,7 @@ http {
     server {
         listen 8080;
         location / {
-            proxy_pass         /;
+            proxy_pass         http://;
         }
     }
 }
