--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ before_script:
 
 script:
   - docker --version # print the version for logging
-  - docker build -t simple-reverse_proxy .
-  - docker tag simple-node isjustintime/simple-reverse-proxy:latest
+  - docker build -t simple-reverse-proxy .
+  - docker tag simple-reverse-proxy isjustintime/simple-reverse-proxy:latest
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
