--- a/nginx.conf
+++ b/nginx.conf
@@ -1,25 +1,7 @@
-worker_processes 1;
-  
-events { worker_connections 1024; }
-error_log /dev/stdout debug;
+server {
+  listen 80;
 
-http {
-
-    sendfile on;
-
-    upstream feed {
-        server my-app-2-svc:8080;
-    }
-    
-    proxy_set_header   Host $host;
-    proxy_set_header   X-Real-IP $remote_addr;
-    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header   X-Forwarded-Host $server_name;
-    
-    server {
-        listen 8080;
-        location / {
-            proxy_pass         http://;
-        }
-    }
+  location /api {
+    proxy_pass http://my-app-2-svc:8080;
+  }
 }
