--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,25 @@
-server {
-  listen 80;
+worker_processes 1;
+  
+events { worker_connections 1024; }
+error_log /dev/stdout debug;
 
-  location /api {
-    proxy_pass http://my-app-2-svc:8080;
-  }
+http {
+
+    sendfile on;
+
+    upstream app {
+        server my-app-2-svc:8080;
+    }
+    
+    proxy_set_header   Host $host;
+    proxy_set_header   X-Real-IP $remote_addr;
+    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header   X-Forwarded-Host $server_name;
+    
+    server {
+        listen 80;
+        location / {
+            proxy_pass         http://app;
+        }
+    }
 }
