--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 
 script:
   - docker --version # print the version for logging
-  - docker build -t simple-reverse-proxy .
+  - docker build -t lmarten/simple-reverse-proxy .
   - docker tag simple-reverse-proxy lmarten/simple-reverse-proxy:latest
 
 after_success:
