--- a/reverseproxy_deployment.yaml
+++ b/reverseproxy_deployment.yaml
@@ -2,29 +2,29 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    service: simple-reverse-proxy
-  name: simple-reverse-proxy
+    service: reverseproxy
+  name: reverseproxy
 spec:
   replicas: 1
   selector:
     matchLabels:
-      service: simple-reverse-proxy
+      service: reverseproxy
   template:
     metadata:
       labels:
-        service: simple-reverse-proxy
+        service: reverseproxy
     spec:
       containers:
-      - image: lmarten/simple-reverse-proxy
-        name: simple-reverse-proxy
-        imagePullPolicy: Always          
-        resources:
-          requests:
-            memory: "64Mi"
-            cpu: "250m"
-          limits:
-            memory: "1024Mi"
-            cpu: "500m"       
-        ports:
-        - containerPort: 8080
+        - image: lmarten/simple-reverse-proxy
+          name: reverseproxy
+          imagePullPolicy: Always
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "1024Mi"
+              cpu: "500m"
+          ports:
+            - containerPort: 8080
       restartPolicy: Always
