--- a/reverseproxy_service.yaml
+++ b/reverseproxy_service.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    service: simple-reverse-proxy
-  name: simple-reverse-proxy-svc
+    service: reverseproxy
+  name: reverseproxy-svc
 spec:
   ports:
   - name: "8080"
     port: 8080
     targetPort: 8080
   selector:
-    service: simple-reverse-proxy
+    service: reverseproxy
